Migrating [[Template:ttbc]] to [[Template:t-check]] <skirt#27438570>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -190,11 +190,11 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 
 {{checktrans-top|(probably for definition 1)}}
 * {{ttbc|af}}: [[rok]]
-* {{ttbc|sq}}: {{t|sq|fund|?}}
+* Albanian: {{t-check|sq|fund|?}}
 * {{ttbc|ar}}: {{l|ar|التنورة}} {{g|f}}
 * {{ttbc|az}}: [[yubka]]
 * {{ttbc|eu}}: [[gona]]
-* {{ttbc|bg}}: {{t+|bg|пола|tr=pola|f|sc=Cyrl}}
+* Bulgarian: {{t+check|bg|пола|tr=pola|f|sc=Cyrl}}
 * {{ttbc|et}}: [[seelik]]
 * {{ttbc|fy}}: [[jûpe]] {{g|f}}
 * {{ttbc|ka}}: [[ქვედაკაბა]] (k’vedakaba)
@@ -206,18 +206,18 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * {{ttbc|lv}}: [[stērbele]] {{g|f}}
 * {{ttbc|lt}}: [[sijonas]]
 * {{ttbc|mn}}: [[банзал]] (banzal)
-* {{ttbc|no}}: {{t|no|skjørt}}
+* Norwegian: {{t-check|no|skjørt}}
 * {{ttbc|pap}}: [[saya]]
-* {{ttbc|fa}}: {{t|fa|دامن دوخت|sc=fa-Arab}}
+* Persian: {{t-check|fa|دامن دوخت|sc=fa-Arab}}
 * {{ttbc|ro}}: [[pulpană]] {{g|f}}
 * {{ttbc|sk}}: [[bočnica]] {{g|f}}
 * {{ttbc|sw}}: [[skati]] ''( nc 9/10)''
 * {{ttbc|tl}}: [[saya]]
-* {{ttbc|th}}: {{t+|th|กระโปรง|tr=grà-bpronge}}
+* Thai: {{t+check|th|กระโปรง|tr=grà-bpronge}}
 * {{ttbc|tr}}: [[etek]]
 * {{ttbc|vi}}: [[vạt áo]]
 * {{ttbc|cy}}: [[sgert]]
-* {{ttbc|yi}}: {{t|yi|קליידל|tr=kleidel|n}}
+* Yiddish: {{t-check|yi|קליידל|tr=kleidel|n}}
 * {{ttbc|zu}}: [[ingubo]]
 {{trans-bottom}}
 
