Migrating [[Template:ttbc]] to [[Template:t-check]] <suck#27438794>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -162,7 +162,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|sk}}: (to ''suck'' a sweet) {{t|sk|cmúľať}}, (to ''suck in'' one’s breath) {{t|sk|vtiahnuť}}
+* Slovak: (to ''suck'' a sweet) {{t-check|sk|cmúľať}}, (to ''suck in'' one’s breath) {{t-check|sk|vtiahnuť}}
 {{trans-bottom}}
 
 ===Noun===
