--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -46,7 +46,7 @@ From {{etyl|la|en}} {{term|Germania|lang=la}}; likely a {{etyl|cel|en}}/{{etyl|c
 * Aragonese: {{t|an|Alemanya|f}}
 * Aramaic: {{t|arc|ܓܪܡܢ|tr=Jerman}}
 * Armenian: {{t+|hy|Գերմանիա|tr=Germania}}
-* Aromanian: {{t|rup|Ghermania}}
+* Aromanian: {{t|rup|Ghermãnia}}
 * Asturian: {{t+|ast|Alemaña|f}}
 * Azeri: {{t+|az|Almaniya}}
 * Bashkir: {{t|ba|Германия|tr=Germaniya|sc=Cyrl}}
