--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -17,27 +17,26 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 ===Verb===
 {{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' {{qualifier|archaic}} '''[[foughten]]'''}}
 
-# {{context|intransitive|lang=en}} To [[contend]] in physical conflict, either singly or in war, battle etc.
-#: {{usex|lang=en|The two boxers have been '''fighting''' for more than half an hour.}}
-#: {{usex|lang=en|A wounded animal will '''fight''' like a maniac.}}
-# {{context|intransitive|lang=en}} To [[strive]] for; to campaign or [[contend]] for success.
-#: {{usex|lang=en|He '''fought''' for the Democrats in the last election.}}
+# {{label|en|intransitive}} To [[contend]] in physical conflict, either singly or in war, battle etc.
+#: {{ux|en|The two boxers have been '''fighting''' for more than half an hour.}}
+#: {{ux|en|A wounded animal will '''fight''' like a maniac.}}
+# {{label|en|intransitive}} To [[strive]] for; to campaign or [[contend]] for success.
+#: {{ux|en|He '''fought''' for the Democrats in the last election.}}
 #* {{quote-book|year=1913|author={{w|Joseph C. Lincoln}}|chapter=7
 |title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]
 |passage=Old Applegate, in the stern, just set and looked at me, and Lord James, amidship, waved both arms and kept hollering for help. I took a couple of everlasting big strokes and managed to grab hold of the skiff's rail, close to the stern. Then, for a jiffy, I hung on and '''fought''' for breath.}}
-# {{context|transitive|lang=en}} To conduct or engage in (battle, warfare etc.).
-#: {{usex|lang=en|The battle was '''fought''' just over that hill.}}
+# {{label|en|transitive}} To conduct or engage in (battle, warfare etc.).
+#: {{ux|en|The battle was '''fought''' just over that hill.}}
 #* Macaulay
 #*: He had to '''fight''' his way through the world.
 #* Bible, {{w|Second Epistle to Timothy|2 Timothy}} iv. 7
 #*: I have '''fought''' a good fight.
-# {{context|transitive|lang=en}} To engage in combat with; to oppose physically, to contest with.
-#: {{usex|lang=en|My grandfather '''fought''' the Nazis in World War II.}}
-# {{context|transitive|lang=en}} To [[try]] to [[overpower]]; to [[fiercely]] [[counteract]].
-#: {{usex|lang=en|The government pledged to '''fight''' corruption.}}
-# {{context|transitive|archaic|lang=en}} To cause to fight; to manage or manoeuvre in a fight.
-#: {{usex|lang=en|to '''fight''' cocks}}
-#: {{usex|lang=en|to '''fight''' one's ship}}
+# {{label|en|transitive}} To engage in combat with; to oppose physically, to contest with.
+#: {{ux|en|My grandfather '''fought''' the Nazis in World War II.}}
+# {{label|en|transitive}} To [[try]] to [[overpower]]; to [[fiercely]] [[counteract]].
+#: {{ux|en|The government pledged to '''fight''' corruption.}}
+# {{label|en|transitive|archaic}} To cause to fight; to manage or manoeuvre in a fight.
+#: {{ux|en|to '''fight''' cocks;&emsp; to '''fight''' one's ship}}
 
 ====Synonyms====
 * See also [[Wikisaurus:fight]]
