--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -25,6 +25,9 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 #* {{quote-book|year=1913|author={{w|Joseph C. Lincoln}}|chapter=7
 |title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]
 |passage=Old Applegate, in the stern, just set and looked at me, and Lord James, amidship, waved both arms and kept hollering for help. I took a couple of everlasting big strokes and managed to grab hold of the skiff's rail, close to the stern. Then, for a jiffy, I hung on and '''fought''' for breath.}}
+#*{{quote-magazine|date=2014-07-05|volume=412|issue=8893|magazine={{w|The Economist}}
+|title=[http://www.economist.com/news/books-and-arts/21606252-ideal-political-role-model-freedom-fighter Freedom fighter]
+|passage=[Edmund] Burke continued to '''fight''' for liberty later on in life. He backed Americans in their campaign for freedom from British taxation. He supported Catholic freedoms and freer trade with Ireland, in spite of his constituents’ ire. He wanted more liberal laws on the punishment of debtors.}}
 # {{label|en|transitive}} To conduct or engage in (battle, warfare etc.).
 #: {{ux|en|The battle was '''fought''' just over that hill.}}
 #* {{w|Thomas Babington Macaulay, 1st Baron Macaulay|Thomas Macaulay}} (1800-1859)
