Migrating [[Template:ttbc]] to [[Template:t-check]] <icon#27462384>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -152,7 +152,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|ia}}: [[icono]]
+* Interlingua: {{t-check|ia|icono}}
 {{trans-mid}}
 {{trans-bottom}}
 
