Migrating [[Template:ttbc]] to [[Template:t-check]] <curtain#27462538>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -163,7 +163,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|id}}: [[serambi]], [[korden]], [[layar]]
+* Indonesian: {{t-check|id|serambi}}, {{t-check|id|korden}}, {{t-check|id|layar}}
 {{trans-bottom}}
 
 ===Verb===
