/* Translations */ corrected Tibetan <thunder#27468275>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -126,7 +126,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Taos: {{t|twf|nąłàcit’ə́otuna}}
 * Telugu: {{t+|te|ఉరుము|tr=urumu|sc=Telu}}
 * Thai: {{t|th|สายฟ้า|tr=săaifáa}}
-* Tibetan: {{t|bo|ལིྡར་སྒཱ།|sc=Tibt}}
+* Tibetan: {{t|bo|ལྡིར་སྒྲ|sc=Tibt}}
 * Turkish: {{t+|tr|gök gürültüsü}}
 * Tutelo: {{t|tta|tuhangrua}}
 * Tuvan: {{t|tyv|диңмирээшкин|tr=diŋmireeškin}}
