Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) — please review: ja <branch#27468324>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -129,7 +129,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Ukrainian: {{t|uk|вітка|f|tr=vítka|sc=Cyrl}}, {{t+|uk|галузь|f|tr=halúzʹ|sc=Cyrl}}, {{t|uk|галузка|f|tr=halúzka|sc=Cyrl}}, {{t|uk|гілка|f|tr=hílka|sc=Cyrl}}, {{t|uk|гілочка|f|tr=híločka|sc=Cyrl}}
 * Uzbek: {{t+|uz|boʻlim}}
 * Vietnamese: {{t+|vi|nhánh}}
-* ǃXóõ: [[gǀkxʻāa-kú]] (''small one'')
+* ǃXóõ: {{qualifier|small one}} {{t|nmn|gǀkxʻāa-kú}}
 {{trans-bottom}}
 
 {{trans-top|something that divides like the branch of a tree}}
@@ -224,13 +224,13 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 
 {{checktrans-top}}
 * French: {{t-check|fr|branche|f}}
-* {{ttbc|io}}: brancho, [[fako]] (of a science)
+* {{ttbc|io}}: {{t-check|io|brancho}}, {{qualifier|of a science}} {{t-check|io|fako}}
 * Indonesian: {{t-check|id|cabang}}
 * Italian: {{t-check|it|ramo|m}}, {{t-check|it|filiale|f}}
-* {{ttbc|ja}}: [[枝]] ([[えだ]], eda) (of tree), [[支店]] ([[してん]], shiten) (of company)
-* {{ttbc|lv}}: [[zars]] {{g|m}} (part of a tree)
-* Old English: {{t-check|ang|bog|bōg|n}}
-* {{ttbc|pt}}: [[ramo]] {{g|m}} (2,4)
+* {{ttbc|ja}}: {{t-check|ja|枝|tr=[[えだ]], eda|sc=Jpan}} (of tree), {{t-check|ja|支店|tr=[[してん]], shiten|sc=Jpan}} (of company)
+* {{ttbc|lv}}: {{qualifier|part of a tree}} {{t-check|lv|zars|m}}
+* Old English: {{t-check|ang|bog|alt=bōg|n}}
+* {{ttbc|pt}}: {{qualifier|2,4}} {{t-check|pt|ramo|m}}
 * Romanian: {{t-check|ro|ram|n}}, {{t-check|ro|ramură|f}}
 * {{ttbc|sh}}:
 * Spanish {{t+check|es|ramo|m}}
