--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -191,27 +191,27 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 {{checktrans-top|(probably for definition 1)}}
 * Afrikaans: {{t-check|af|rok}}
 * Albanian: {{t-check|sq|fund|alt=?}}
-* {{ttbc|ar}}: {{l|ar|التنورة}} {{g|f}}
+* {{ttbc|ar}}: {{t-check|ar|التنورة|f|sc=Arab}}
 * Azeri: {{t-check|az|yubka}}
 * Basque: {{t-check|eu|gona}}
 * Bulgarian: {{t+check|bg|пола|tr=pola|f|sc=Cyrl}}
 * Estonian: {{t-check|et|seelik}}
 * West Frisian: {{t-check|fy|jûpe|f}}
-* {{ttbc|ka}}: [[ქვედაკაბა]] (k’vedakaba)
-* Hebrew: {{t-check|he|עקף|עָקַף|m}}
-* {{ttbc|hi}}: [[स्कर्ट]] (skart.a)
+* {{ttbc|ka}}: {{t-check|ka|ქვედაკაბა|tr=k’vedakaba|sc=Geor}}
+* Hebrew: {{t-check|he|עקף|alt=עָקַף|m}}
+* {{ttbc|hi}}: {{t-check|hi|स्कर्ट|tr=skart.a|sc=Deva}}
 * Indonesian: {{t-check|id|rok}}
 * Irish: {{t-check|ga|sciorta|m}}
 {{trans-mid}}
 * Latvian: {{t-check|lv|stērbele|f}}
 * Lithuanian: {{t-check|lt|sijonas}}
-* {{ttbc|mn}}: [[банзал]] (banzal)
+* {{ttbc|mn}}: {{t-check|mn|банзал|tr=banzal|sc=Cyrl}}
 * Norwegian: {{t-check|no|skjørt}}
 * Papiamentu: {{t-check|pap|saya}}
 * Persian: {{t-check|fa|دامن دوخت|sc=fa-Arab}}
 * Romanian: {{t-check|ro|pulpană|f}}
 * Slovak: {{t-check|sk|bočnica|f}}
-* {{ttbc|sw}}: [[skati]] ''( nc 9/10)''
+* {{ttbc|sw}}: {{t-check|sw|skati|c9|c10}}
 * Tagalog: {{t-check|tl|saya}}
 * Thai: {{t+check|th|กระโปรง|tr=grà-bpronge}}
 * Turkish: {{t-check|tr|etek}}
