--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -224,13 +224,13 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 
 {{checktrans-top}}
 * French: {{t-check|fr|branche|f}}
-* {{ttbc|io}}: {{t-check|io|brancho}}, {{qualifier|of a science}} {{t-check|io|fako}}
+* Ido: {{t-check|io|brancho}}, {{qualifier|of a science}} {{t-check|io|fako}}
 * Indonesian: {{t-check|id|cabang}}
 * Italian: {{t-check|it|ramo|m}}, {{t-check|it|filiale|f}}
-* {{ttbc|ja}}: {{t-check|ja|枝|tr=[[えだ]], eda|sc=Jpan}} (of tree), {{t-check|ja|支店|tr=[[してん]], shiten|sc=Jpan}} (of company)
-* {{ttbc|lv}}: {{qualifier|part of a tree}} {{t-check|lv|zars|m}}
+* Japanese: {{t-check|ja|枝|tr=[[えだ]], eda|sc=Jpan}} (of tree), {{t-check|ja|支店|tr=[[してん]], shiten|sc=Jpan}} (of company)
+* Latvian: {{qualifier|part of a tree}} {{t-check|lv|zars|m}}
 * Old English: {{t-check|ang|bog|alt=bōg|n}}
-* {{ttbc|pt}}: {{qualifier|2,4}} {{t-check|pt|ramo|m}}
+* Portuguese: {{qualifier|2,4}} {{t-check|pt|ramo|m}}
 * Romanian: {{t-check|ro|ram|n}}, {{t-check|ro|ramură|f}}
 * {{ttbc|sh}}:
 * Spanish {{t+check|es|ramo|m}}
