--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -9,7 +9,7 @@
 * {{rhymes|əʊt|lang=en}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to float}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*flutōną||to float}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*plewd-}}, {{m|ine-pro|*plew-||to float, swim, fly}}. Cognate with {{etyl|gml|en}} {{m|gml|vloten}}, {{m|gml|vlotten||to float, swim}}, {{etyl|dum|en}} {{m|dum|vloten}}, {{etyl|non|en}} {{m|non|flota}}, {{etyl|is|en}} {{m|is|fljóta}}, {{etyl|ang|en}} {{m|ang|flēotan||to float, swim}}, {{etyl|grc|en}} {{m|grc|πλέω}}, {{etyl|lt|en}} {{m|lt|plaukti}}, {{etyl|ru|en}} {{term|плавать|lang=ru}}, {{etyl|la|en}} {{m|la|plaustrum||wagon, cart}}.
+From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to float}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*flutōną||to float}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*plewd-}}, {{m|ine-pro|*plew-||to float, swim, fly}}. Cognate with {{etyl|gml|-}} {{m|gml|vloten}}, {{m|gml|vlotten||to float, swim}}, {{etyl|dum|-}} {{m|dum|vloten}}, {{etyl|non|-}} {{m|non|flota}}, {{etyl|is|-}} {{m|is|fljóta}}, {{etyl|ang|-}} {{m|ang|flēotan||to float, swim}}, {{etyl|grc|-}} {{m|grc|πλέω}}, {{etyl|lt|-}} {{m|lt|plaukti}}, {{etyl|ru|-}} {{term|плавать|lang=ru}}, {{etyl|la|-}} {{m|la|plaustrum||wagon, cart}}.
 
 ===Noun===
 {{en-noun}}
