--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -453,7 +453,9 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Romanian: {{t+|ro|joc|m|f}}
 * Russian: {{t+|ru|игра|f|tr=igrá}}
 * Scottish Gaelic: {{t|gd|cleasachd|f}}
-* Serbo-Croatian: {{t|sh|ìgra|f}}
+* Serbo-Croatian: 
+*: Cyrillic: {{t|sh|игра|f}}
+*: Roman: {{t|sh|ìgra|f}}
 * Slovak: {{t|sk|hra|f}}
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: {{t+|es|juego|m}}
@@ -517,7 +519,9 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Polish: {{t+|pl|sztuka|f}}
 * Portuguese: {{t-check|pt|[[peça]] [[teatral]]|f}} <!-- was "[[peça]] [[teatral]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 * Russian: {{t+|ru|пьеса|f|tr=p’jésa}}, {{t+|ru|спектакль|m|tr=spektákl’}}
-* Serbo-Croatian: {{t|sh|prèdstava|f}}
+* Serbo-Croatian: 
+*: Cyrillic: {{t|sh|представа|f}}
+*: Roman: {{t|sh|prèdstava|f}}
 * Slovak: {{t|sk|hra|f}}
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: {{t-check|es|[[obra]] [[teatral]]|f}} <!-- was "[[obra]] [[teatral]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
