--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -146,13 +146,14 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 
 {{trans-top|colloquial: term of general disparagement}}
 * Bulgarian: {{t+|bg|духам|tr=dukham}}
+* Dutch: {{t|nl|klote zijn}}
 * Esperanto: {{t|eo|aĉi}}
 * Finnish: {{t+|fi|haista}}, {{t|fi|olla syvältä}}
 * French: {{t|fr|[[être]] [[chiant]]}}, {{t|fr|[[être]] [[nul]]}}
 * German: {{t|de|mies sein}}, {{t|de|zum Kotzen sein}}, {{t|de|Scheiße sein}}
 * Greek: {{t|el|άστα να πάνε|sc=Grek}} {{qualifier|situation}}, {{t|el|είμαι μαλάκας|sc=Grek}} {{qualifier|person}}
-* Icelandic: {{t|is|sökka}}, {{t+|is|ömurlegur|m}}
 {{trans-mid}}
+* Icelandic: {{t|is|sökka}}, {{t+|is|ömurlegur|m}}
 * Italian: {{t|it|essere una schiappa}}, {{t|it|fare schifo}}
 * Japanese: {{t|ja|サック|tr=sakku|sc=Jpan}}
 * Norwegian: {{t|no|suge}}
