--- a/en/惞/惞.15603.wikitext
+++ b/en/惞/惞.15603.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心竹中人 (PHLO)}}
+{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心竹中人 (PHLO)|ids=⿰[[忄]][[欣]]}}
 
 # {{defn|Han|sort=心08}}
 
