--- a/en/惟/惟.15604.wikitext
+++ b/en/惟/惟.15604.wikitext
@@ -11,12 +11,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[惟]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=wai4}}
-
-# {{defn|lang=yue|sort=心08}}
+===Pronunciation===
+{{zh-pron
+|m=wéi
+|c=wai4
+|mc=y
+|oc=y
+|cat=prep,adv,conj,a
+}}
 
 ----
 
@@ -38,15 +43,6 @@
 {{ko-hanja|hangeul=유|eumhun=|rv=yu|mr=yu|y=yu}}
 
 # {{defn|lang=ko|sort=心08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[wéi]] ([[wei2]])|wg=wei<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心08}}
 
 ----
 
