converted "Cantonese", "Mandarin" and "Min Nan" sections into unified "Chinese" section <惡#27581694>

--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -13,12 +13,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[恶]]|惡}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ngok3]], [[ok3]], [[wu1]], [[wu3]]|y=ngok3, ok3, wu1, wu3}}
+===Pronunciation===
+{{zh-pron
+|m=è,wù,wū
+|c=ngok3,ok3,wu1,wu3
+|mn=ok/òⁿ
+|mc=y
+|oc=y
+|cat=a
+}}
 
-# {{defn|lang=yue|sort=心08}}
+====References====
+*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=8366&curpage=1&sample=%E6%83%A1&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=20 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
@@ -47,27 +56,6 @@
 * [[악과]] [惡果]
 * [[악기]] [惡氣]
 * [[악설]] [惡說, 惡舌]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=恶|pin=[[è]] ([[e4]]), [[wū]], ([[wu1]]), [[wù]] ([[wu4]])|wg=o<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心08}}
-
-----
-
-==Min Nan==
-
-===Hanzi===
-{{nan-hanzi|tlpa=ok (ok<sup>4</sup>), ònn (onn<sup>3</sup>)}}
-
-# {{defn|lang=nan|sort=心08}}
-
-====References====
-*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=8366&curpage=1&sample=%E6%83%A1&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=20 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
