t+io:[[tondrar]] t-balance ([[WT:EDIT|Assisted]]) <thunder#27582188>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -239,11 +239,12 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Friulian: {{t|fur|tonâ}}
 * German: {{t+|de|donnern}}
 * Hebrew: {{t+|he|רעם|tr=ra'am|sc=Hebr}}
+* Ido: {{t+|io|tondrar}}
 * Italian: {{t|it|tuonare}}
 * Japanese: {{qualifier|it thunders}} {{t|ja|雷が鳴る|tr=[[かみなり]]が[[なる]], kaminari ga naru}}, {{qualifier|to make a noise like thunder}} {{t|ja|轟音を立てる|tr=gōon o tateru}}
-{{trans-mid}}
 * Latin: {{t|la|tono}}
 * Luxembourgish: {{t|lb|donneren}}
+{{trans-mid}}
 * Occitan: {{t+|oc|tronar}}
 * Polish: {{t|pl|grzmieć}}, {{t|pl|zagrzmieć}}
 * Portuguese: {{t|pt|trovoar}}, {{t+|pt|trovejar}}
