--- a/en/惢/惢.15607.wikitext
+++ b/en/惢/惢.15607.wikitext
@@ -12,6 +12,20 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[惢]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=suǒ,ruǐ
+|c=so2
+|mc=y
+|oc=y
+|cat=a,adv
+}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -30,15 +44,6 @@
 {{ko-hanja|hangeul=솨|eumhun=|rv=swa|mr=swa|y=swa}}
 
 # {{defn|lang=ko|sort=心08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[ruǐ]] ([[rui3]]), [[suǒ]] ([[suo3]])|wg=jui<sup>3</sup>, so<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心08}}
 
 [[fr:惢]]
 [[li:惢]]
