--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -204,12 +204,12 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 {{en-verb}}
 
 # To produce thunder; to sound, rattle, or roar, as a discharge of atmospheric electricity; often used impersonally.
-#: ''It '''thundered''' continuously.''
-# {{context|intransitive|lang=en}} To make a [[noise]] like thunder.
-#: ''The train '''thundered''' along the tracks.''
-# {{context|intransitive|lang=en}} To talk with a [[loud]], [[threatening]] voice.
-#: ''"Get back to work at once!", he '''thundered'''.''
-# {{context|transitive|lang=en}} To say (something) with a loud, threatening voice.
+#: {{usex|It '''thundered''' continuously.|lang=en}}
+# {{label|en|intransitive}} To make a [[noise]] like thunder.
+#: {{usex|The train '''thundered''' along the tracks.|lang=en}}
+# {{label|en|intransitive}} To talk with a [[loud]], [[threatening]] voice.
+# {{label|en|transitive}} To say (something) with a loud, threatening voice.
+#: {{usex|"Get back to work at once!", he '''thundered'''.|lang=en}}
 # To produce something with incredible power
 #* {{quote-news
 |year=2011
@@ -238,21 +238,23 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 * French: {{t+|fr|tonner}}
 * Friulian: {{t|fur|tonâ}}
 * German: {{t+|de|donnern}}
-* Hebrew: {{t+|he|רעם|tr=ra'am|sc=Hebr}}
+* Hebrew: {{t+|he|רעם|tr=ra'am}}
 * Ido: {{t+|io|tondrar}}
 * Italian: {{t|it|tuonare}}
 * Japanese: {{qualifier|it thunders}} {{t|ja|雷が鳴る|tr=[[かみなり]]が[[なる]], kaminari ga naru}}, {{qualifier|to make a noise like thunder}} {{t|ja|轟音を立てる|tr=gōon o tateru}}
 * Latin: {{t|la|tono}}
 * Luxembourgish: {{t|lb|donneren}}
-{{trans-mid}}
 * Occitan: {{t+|oc|tronar}}
+{{trans-mid}}
 * Polish: {{t|pl|grzmieć}}, {{t|pl|zagrzmieć}}
 * Portuguese: {{t|pt|trovoar}}, {{t+|pt|trovejar}}
 * Romanian: {{t+|ro|tuna}}
 * Romansch: {{t|rm|tunar}}, {{t|rm|tuner}}
 * Russian: {{t+|ru|греметь|impf|tr=gremét’}}, {{t+|ru|грохотать|impf|tr=groxotát’}}, {{t+|ru|громыхать|impf|tr=gromyxát’|sc=Cyrl}}
 * Sardinian: {{t|sc|tronai}}, {{t|sc|tronare}}
-* Serbo-Croatian: {{t|sh|gr̀meti|impf}}, {{t|sh|гр̀мети|impf|sc=Cyrl}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|гр̀мети|impf|sc=Cyrl}}
+*: Roman: {{t|sh|gr̀meti|impf}}
 * Slovene: {{t|sl|grmeti}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|grimaś|impf}}
