--- a/en/惤/惤.15609.wikitext
+++ b/en/惤/惤.15609.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=11|four=9003<sub>2</sub>|canj=心弓卜戈 (PNYI)}}
+{{Han char|rn=61|rad=心|as=08|sn=11|four=9003<sub>2</sub>|canj=心弓卜戈 (PNYI)|ids=⿰[[忄]][[弦]]}}
 
 # {{defn|Han|sort=心08}}
 
