converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <惤#27583260>

--- a/en/惤/惤.15609.wikitext
+++ b/en/惤/惤.15609.wikitext
@@ -10,12 +10,20 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[x]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[jiān]] ([[jian1]])|wg=chien<sup>1</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=jiān
+|c=gin1
+|mc=
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心08}}
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List
 
 [[fr:惤]]
 [[li:惤]]
