--- a/en/惥/惥.15610.wikitext
+++ b/en/惥/惥.15610.wikitext
@@ -10,6 +10,23 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[惥]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=yǒng
+|c=jung2
+|mc=
+|oc=
+|cat=
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +36,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[よう]] (yō)|kun=[[すすめる]] (susumeru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yǒng]] ([[yong3]])|wg=yung<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心08}}
 
 [[fr:惥]]
 [[li:惥]]
