--- a/en/惦/惦.15611.wikitext
+++ b/en/惦/惦.15611.wikitext
@@ -10,21 +10,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[惦]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=dim3}}
-
-# {{defn|lang=yue|sort=心08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[diàn]] ([[dian4]])|wg=tien<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心08}}
+===Pronunciation===
+{{zh-pron
+|m=diàn
+|c=dim3
+|mc=
+|oc=
+|cat=v
+}}
 
 [[fr:惦]]
 [[li:惦]]
