--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -19,6 +19,8 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 {{en-proper noun|Frances}}
 
 # A [[country]] in Western Europe which borders [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]], is a member state of the [[European Union]]{{,}} and has a population of 62 million inhabitants. Official name: [[French Republic]] ([[République française]]).
+#* '''1998''', Shanny Peer, ''France on Display: Peasants, Provincials, and Folklore'' (ISBN 0791437108), page 2:
+#*: Although scholars have offered different chronologies and causalities for the move toward modernity, most have resolved the paradox of the two '''Frances''' by placing them in sequence: "diverse '''France''' gave way over time as modern centralized '''France''' gathered force."
 #* {{quote-news
 |year=2012
 |date=April 23
