--- a/en/惧/惧.15612.wikitext
+++ b/en/惧/惧.15612.wikitext
@@ -11,12 +11,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|惧|[[懼]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=geoi6|y=geui6|tra=懼}}
-
-# {{defn|lang=yue|sort=心08}}
+===Pronunciation===
+{{zh-pron
+|m=jù
+|c=geoi6
+|mc=
+|oc=
+|cat=v
+}}
 
 ----
 
@@ -29,15 +34,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[く]] (ku), [[ぐ]] (gu)|kun=[[おそれる]] (osoreru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=懼|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心08}}
 
 [[fr:惧]]
 [[li:惧]]
