--- a/en/惩/惩.15614.wikitext
+++ b/en/惩/惩.15614.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=12|four=|canj=竹一心 (HMP)}}
+{{Han char|rn=61|rad=心|as=08|sn=12|four=|canj=竹一心 (HMP)|ids=⿱[[征]][[心]]}}
 
 # [[punish]], [[reprimand]]
 # [[warn]]
