--- a/en/惪/惪.15615.wikitext
+++ b/en/惪/惪.15615.wikitext
@@ -11,6 +11,23 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[惪]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=dé
+|c=dak1
+|mc=y
+|oc=y
+|cat=n
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -29,15 +46,6 @@
 {{ko-hanja|hangeul=덕|eumhun=|rv=deok|mr=tŏk|y=tek}}
 
 # {{defn|lang=ko|sort=心08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[dé]] ([[de2]])|wg=te<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心08}}
 
 [[fr:惪]]
 [[li:惪]]
