--- a/en/惫/惫.15616.wikitext
+++ b/en/惫/惫.15616.wikitext
@@ -11,21 +11,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|惫|[[憊]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=baai6, bei6|tra=憊}}
-
-# {{defn|lang=yue|sort=心08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=憊|pin=[[bèi]] ([[bei4]])|wg=pei<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心08}}
+===Pronunciation===
+{{zh-pron
+|m=bèi
+|c=baai6,bei6
+|mc=
+|oc=
+|cat=a
+}}
 
 ====Compounds====
 * [[惫乏]]
