--- a/en/惬/惬.15617.wikitext
+++ b/en/惬/惬.15617.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心尸大廿 (PSKT)}}
+{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心尸大廿 (PSKT)|ids=⿰[[忄]]⿷[[匚]][[夹]]}}
 
-# be satisfied, be comfortable
+# be [[satisfied]], be [[comfortable]]
 
 ====References====
 * {{Han ref|kx=0392.181|hdz=42313.020|uh=60EC|ud=24812}}
