--- a/en/惰/惰.15621.wikitext
+++ b/en/惰/惰.15621.wikitext
@@ -10,12 +10,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[惰]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=do6}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=duò
+|c=do6
+|mc=y
+|oc=y
+|cat=a
+}}
 
 ----
 
@@ -37,15 +42,6 @@
 {{ko-hanja|hangeul=타|eumhun=|rv=ta|mr=t'a|y=tha}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[duò]] ([[duo4]])|wg=to<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 ----
 
