--- a/en/惱/惱.15622.wikitext
+++ b/en/惱/惱.15622.wikitext
@@ -12,12 +12,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[恼]]|惱}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=nou5|sim=恼}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=nǎo
+|c=nou5
+|mc=y
+|oc=y
+|cat=v
+}}
 
 ----
 
@@ -39,15 +44,6 @@
 {{ko-hanja|hangeul=뇌|eumhun=|rv=noe|mr=noe|y=noy}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=恼|pin=[[nǎo]] ([[nao3]])|wg=nao<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 ----
 
