--- a/en/惲/惲.15623.wikitext
+++ b/en/惲/惲.15623.wikitext
@@ -12,12 +12,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[恽]]|惲}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=wan6|sim=恽}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=yùn
+|c=wan6
+|mc=y
+|oc=y
+|cat=v
+}}
 
 ----
 
@@ -39,15 +44,6 @@
 {{ko-hanja|hangeul=운|eumhun=|rv=un|mr=un|y=wun}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=恽|pin=[[yùn]] ([[yun4]])|wg=yün<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 ----
 
