/* Translingual */ added "a surname" definition <惲#27596506>

--- a/en/惲/惲.15623.wikitext
+++ b/en/惲/惲.15623.wikitext
@@ -6,6 +6,7 @@
 
 # [[devise]], [[plan]], [[deliberate]]
 # [[consult]]
+# a [[surname]]
 
 ====References====
 * {{Han ref|kx=0392.250|dkj=10857|dj=0728.090|hdz=42331.100|uh=60F2|ud=24818|bh=D940|bd=55616}}
