--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -87,12 +87,13 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Hungarian: {{t+|hu|szoknya}}, {{t+|hu|alj}}
 * Icelandic: {{t+|is|pils|n}}
 * Ido: {{t+|io|jupo}}
+* Irish: {{t|ga|sciorta|m}}
 * Italian: {{t+|it|gonna|f}}
 * Japanese: {{t|ja|スカート|tr=sukāto|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|cotelle|f}}, {{t|roa-jer|cotillon|m}}
 * Korean: {{t+|ko|치마|sc=Kore}}
-* Latvian: {{t|lv|svārki|m-p}}
 {{trans-mid}}
+* Latvian: {{t|lv|svārki|m-p}}
 * Luxembourgish: {{t|lb|Jupe|f}}
 * Macedonian: {{t|mk|здолниште|n}}, {{t|mk|здолница|f}}, {{t|mk|сукња|f}} {{qualifier|colloquial}}
 * Maltese: {{t|mt|dublett|m}}
@@ -137,6 +138,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Greek: {{t+|el|φούστα|f}}
 * Hungarian: {{t+|hu|alj}}
 * Interlingua: {{t|ia|gonna}}
+* Irish: {{t|ga|sciorta|m}}
 * Italian: {{t+|it|gonna|f}}
 {{trans-mid}}
 * Latvian: {{t|lv|svārki|m-p}}
