--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -23,8 +23,24 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 # A [[raisin]], when used in a pudding or cake.
 # {{context|pejorative|lang=en}} A [[fool]], [[idiot]]
 # {{context|slang|usually in plural|lang=en}} A [[testicle]].
-# The edible, fleshy stone fruit of ''[[Prunus mume]]'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
-# The tree which bears this fruit, ''[[Prunus mume]]''.
+# The edible, fleshy stone fruit of several species sharing {{taxlink|Prunus subg. Prunus|subgenus|noshow=1}} with ''Prunus domestica'' including, among others:
+## {{taxlink|Prunus sect. Prunus|section|noshow=1}}
+### {{taxlink|Prunus cerasifera|species|noshow=1}} the [[cherry plum]] or [[myrobalan]]
+### {{taxlink|Prunus salicina|species|noshow=1}} the [[Chinese plum]] or [[Japanese plum]]
+### {{taxlink|Prunus spinosa|species|noshow=1}}, the [[sloe]]
+### {{taxlink|Prunus ursina|species|noshow=1}} the [[bear's plum]]
+## {{taxlink|Prunus sect. Prunocerasus|section|noshow=1}} North American plums
+### {{taxlink|Prunus americanus|species|noshow=1}}, the [[American plum]]
+### {{taxlink|Prunus angustifolia|species|noshow=1}}, the [[Chickasaw plum]] or [[sandhill plum]]
+### {{taxlink|Prunus hortulana|species|noshow=1}}, the [[hortulan plum]]
+### {{taxlink|Prunus nigra|species|noshow=1}}, the [[Canadian plum]] or [[black plum]]
+### {{taxlink|Prunus rivularis|species|noshow=1}}, the [[creek plum]] or [[hog plum]]
+### {{taxlink|Prunus subcordata|species|noshow=1}}, the [[Klamath plum]] or [[Oregon plum]]
+## {{taxlink|Prunus sect. Armeniaca|section|noshow=1}} (better known as [[apricot]]s)
+### ''[[Prunus mume]]'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
+# The [[stone-fruit]] trees which bear these fruits.
+# The fruits of many unrelated trees and shrubs with fruit perceived to resemble plums
+# The trees bearing those fruits
 
 =====Synonyms=====
 * {{sense|tree}} [[plum tree]]
