--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -40,7 +40,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 ### ''[[Prunus mume]]'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
 # The [[stone-fruit]] trees which bear these fruits.
 # The fruits of many unrelated trees and shrubs with fruit perceived to resemble plums
-# The trees bearing those fruits
+# The trees and shrubs bearing those fruits
 
 =====Synonyms=====
 * {{sense|tree}} [[plum tree]]
