--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -26,16 +26,16 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 # The edible, fleshy stone fruit of several species sharing {{taxlink|Prunus subg. Prunus|subgenus|noshow=1}} with ''Prunus domestica'' including, among others:
 ## {{taxlink|Prunus sect. Prunus|section|noshow=1}}
 ### {{taxlink|Prunus cerasifera|species|noshow=1}} the [[cherry plum]] or [[myrobalan]]
-### {{taxlink|Prunus salicina|species|noshow=1}} the [[Chinese plum]] or [[Japanese plum]]
-### {{taxlink|Prunus spinosa|species|noshow=1}}, the [[sloe]]
-### {{taxlink|Prunus ursina|species|noshow=1}} the [[bear's plum]]
+### {{taxlink|Prunus salicina|species|noshow=1}} the [[Chinese plum]] or {{vern|Japanese plum|pedia=1}}
+### ''[[Prunus spinosa]]'', the [[sloe]]
+### {{taxlink|Prunus ursina|species|noshow=1}} the {{vern|bear's plum|pedia=1}}
 ## {{taxlink|Prunus sect. Prunocerasus|section|noshow=1}} North American plums
-### {{taxlink|Prunus americanus|species|noshow=1}}, the [[American plum]]
-### {{taxlink|Prunus angustifolia|species|noshow=1}}, the [[Chickasaw plum]] or [[sandhill plum]]
-### {{taxlink|Prunus hortulana|species|noshow=1}}, the [[hortulan plum]]
-### {{taxlink|Prunus nigra|species|noshow=1}}, the [[Canadian plum]] or [[black plum]]
-### {{taxlink|Prunus rivularis|species|noshow=1}}, the [[creek plum]] or [[hog plum]]
-### {{taxlink|Prunus subcordata|species|noshow=1}}, the [[Klamath plum]] or [[Oregon plum]]
+### {{taxlink|Prunus americanus|species|noshow=1}}, the {{vern|American plum|pedia=1}}
+### {{taxlink|Prunus angustifolia|species|noshow=1}}, the {{vern|Chickasaw plum|pedia=1}} or {{vern|sandhill plum|pedia=1}}
+### {{taxlink|Prunus hortulana|species|noshow=1}}, the {{vern|hortulan plum|pedia=1}}
+### {{taxlink|Prunus nigra|species|noshow=1}}, the {{vern|Canadian plum|pedia=1}} or {{vern|black plum|pedia=1}}
+### {{taxlink|Prunus rivularis|species|noshow=1}}, the {{vern|creek plum|pedia=1}} or {{vern|hog plum|pedia=1}}
+### {{taxlink|Prunus subcordata|species|noshow=1}}, the {{vern|Klamath plum|pedia=1}} or {{vern|Oregon plum|pedia=1}}
 ## {{taxlink|Prunus sect. Armeniaca|section|noshow=1}} (better known as [[apricot]]s)
 ### ''[[Prunus mume]]'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
 # The [[stone-fruit]] trees which bear these fruits.
