/* Mandarin */ changed "diè" (die4) pinyin reading to "dié" (die2) (per Unihan database) <惵#27657100>

--- a/en/惵/惵.15626.wikitext
+++ b/en/惵/惵.15626.wikitext
@@ -43,7 +43,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[diè]] ([[die4]])|wg=tieh<sup>4</sup>}}
+{{cmn-hanzi|pin=[[dié]] ([[die2]])|wg=tieh<sup>2</sup>}}
 
 # {{defn|lang=cmn|sort=心09}}
 
