converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <惵#27657102>

--- a/en/惵/惵.15626.wikitext
+++ b/en/惵/惵.15626.wikitext
@@ -10,12 +10,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[惵]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[dip6]]|y=dip6}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=dié
+|c=dip6
+|mc=y
+|oc=y
+|cat=
+}}
 
 ----
 
@@ -37,15 +42,6 @@
 {{ko-hanja|hangeul=접|rv=jeop|mr=chŏp|y=cep}}
 
 # fear
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[dié]] ([[die2]])|wg=tieh<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:惵]]
 [[hu:惵]]
