--- a/en/惶/惶.15627.wikitext
+++ b/en/惶/惶.15627.wikitext
@@ -10,12 +10,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[惶]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=wong4}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=huáng
+|c=wong4
+|mc=y
+|oc=y
+|cat=a
+}}
 
 ----
 
@@ -37,15 +42,6 @@
 {{ko-hanja|hangeul=황|eumhun=|rv=hwang|mr=hwang|y=hwang}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[huáng]] ([[huang2]])|wg=huang<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 ----
 
