--- a/en/惷/惷.15714.wikitext
+++ b/en/惷/惷.15714.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=13|four=4033<sub>6</sub>|canj=手日心 (QAP)}}
+{{Han char|rn=61|rad=心|as=09|sn=13|four=4033<sub>6</sub>|canj=手日心 (QAP)|ids=⿱[[春]][[心]]}}
 
 # [[wriggle]]
 # [[stupid]]
