--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -22,87 +22,18 @@ There are minor differences in where the last stroke of the top component (top-l
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=ceon1|y=cheun1}}
-
-# {{defn|lang=yue|sort=日05}}
-
-----
-
-==Japanese==
-
-===Kanji===
-{{ja-kanji|grade=2|rs=日05}}
-
-# [[spring#Noun|spring]] {{gloss|season}}
-
-====Readings====
-* {{ja-readings
-|goon=[[しゅん]] (shun)
-|kanon=[[しゅん]] (shun)
-|kun=[[はる]] (haru)}}
-
-====Compounds====
-* [[小春]] ([[こはる]], [[koharu]]): [[early autumn]], [[Indian summer]]
-* [[小春日和]] ([[こはるびより]], [[koharubiyori]]): [[early autumn]], [[Indian summer]]
-* [[常春]] ([[とこはる]], [[tokoharu]]): [[everlasting spring]]
-* [[初春]] ([[はつはる]], [[hatsuharu]], [[しょしゅん]], [[shoshun]]):  [[early spring]], [[New Year]]
-* [[春秋]] ([[しゅんじゅう]], [[shunshū]]): spring and autumn, months and years, Chronicles of Lu
-* [[春秋戦国]] ([[しゅんじゅうせんごく]], [[shunjuusengoku]]): [[Spring and Autumn Period]] and [[Warring States Period]] in China
-* [[春一番]] ([[はるいちばん]]: [[haruichiban]]): first storm of spring
-* [[春風]] ([[はるかぜ]], [[harukaze]]): spring breeze
-* [[春霞]] ([[はるがすみ]], [[harugasumi]]) springtime haze
-* [[春着]] ([[はるぎ]], [[harugi]]): springwear, New Year's clothes
-* [[春蚕]] ([[はるご]], [[harugo]]): spring breed of silkworms
-* [[春先]] ([[はるさき]], [[harusaki]]): beginning of spring
-* [[春雨]] ([[はるさめ]], [[harusame]]): spring rain, Japanese vermicelli
-* [[春場所]] ([[はるばしょ]], [[harubasho]]): the spring sumo tournament in Osaka
-* [[春繭]] ([[はるまゆ]], [[harumayu]]): the spring cocoon crop
-* [[春休み]] ([[はるやすみ]], [[haruyasumi]]): spring break
-* [[来春]] ([[らいしゅん]], [[raishun]]): [[next spring]]
-* [[翌春]] ([[よくしゅん]], [[yokushun]]): [[next spring]]
-* [[春分]] ([[しゅんぶん]], [[shunbun]]) [[spring equinox]], [[vernal equinox]]
+==Chinese==
+{{zh-hanzi-box|[[春]]}}
 
 ===Pronunciation===
-* {{ja-accent-common|a|は|る}}
-
-===Noun===
-{{ja-noun|k|hira=はる|rom=haru}}
-
-# [[spring#Noun|spring]] {{gloss|season}}
-
-====Synonyms====
-* [[春季]] ([[しゅんき]], [[shunki]]): [[spring]]
-* [[春期]] ([[しゅんき]], [[shunki]]): [[spring]]
-
-[[Category:1000 Japanese basic words|はる]]
-[[Category:Japanese terms spelled with 春]]
-[[Category:Japanese terms written with one Han script character]]
-[[Category:ja:Calendar terms|はる]]
-[[Category:ja:Seasons|はる]]
-
-----
-
-==Korean==
-
-===Hanja===
-{{ko-hanja|hangeul=춘|eumhun=|rv=chun|mr=ch'un|y=chwun}}
-
-# {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Pronunciation===
-* {{audio|zh-chūn.ogg|audio|lang=cmn}}
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chūn]] ([[chun1]])|wg=ch'un<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
+{{zh-pron
+|m=chūn
+|c=ceon1
+|mc=y
+|oc=y
+|ma=zh-chūn.ogg
+|cat=n,a
+}}
 
 ====Compounds====
 * [[春冰]]
@@ -170,41 +101,68 @@ There are minor differences in where the last stroke of the top component (top-l
 * [[春种]]
 * [[春装]]
 
-[[Category:Mandarin entries with audio links]]
-
 ----
 
-==Middle Chinese==
+==Japanese==
 
-===Etymology===
-From {{etyl|och|ltc}} {{term|春|tr=*tʰun|lang=och}}
-{{zh-hanzi-box|春}}
+===Kanji===
+{{ja-kanji|grade=2|rs=日05}}
 
-===Han character===
-{{head|ltc|sc=Hani|tr= ''Karlgren-Li'' tśhuiĕn:, ''Baxter-Sagart'' tsyhwin, ''Stimson'' *chuin}}<!--note: asterisk indicates that this character appears more than four times in the Tang Dynasty corpus of literature-->
+# [[spring#Noun|spring]] {{gloss|season}}
+
+====Readings====
+* {{ja-readings
+|goon=[[しゅん]] (shun)
+|kanon=[[しゅん]] (shun)
+|kun=[[はる]] (haru)}}
+
+====Compounds====
+* [[小春]] ([[こはる]], [[koharu]]): [[early autumn]], [[Indian summer]]
+* [[小春日和]] ([[こはるびより]], [[koharubiyori]]): [[early autumn]], [[Indian summer]]
+* [[常春]] ([[とこはる]], [[tokoharu]]): [[everlasting spring]]
+* [[初春]] ([[はつはる]], [[hatsuharu]], [[しょしゅん]], [[shoshun]]):  [[early spring]], [[New Year]]
+* [[春秋]] ([[しゅんじゅう]], [[shunshū]]): spring and autumn, months and years, Chronicles of Lu
+* [[春秋戦国]] ([[しゅんじゅうせんごく]], [[shunjuusengoku]]): [[Spring and Autumn Period]] and [[Warring States Period]] in China
+* [[春一番]] ([[はるいちばん]]: [[haruichiban]]): first storm of spring
+* [[春風]] ([[はるかぜ]], [[harukaze]]): spring breeze
+* [[春霞]] ([[はるがすみ]], [[harugasumi]]) springtime haze
+* [[春着]] ([[はるぎ]], [[harugi]]): springwear, New Year's clothes
+* [[春蚕]] ([[はるご]], [[harugo]]): spring breed of silkworms
+* [[春先]] ([[はるさき]], [[harusaki]]): beginning of spring
+* [[春雨]] ([[はるさめ]], [[harusame]]): spring rain, Japanese vermicelli
+* [[春場所]] ([[はるばしょ]], [[harubasho]]): the spring sumo tournament in Osaka
+* [[春繭]] ([[はるまゆ]], [[harumayu]]): the spring cocoon crop
+* [[春休み]] ([[はるやすみ]], [[haruyasumi]]): spring break
+* [[来春]] ([[らいしゅん]], [[raishun]]): [[next spring]]
+* [[翌春]] ([[よくしゅん]], [[yokushun]]): [[next spring]]
+* [[春分]] ([[しゅんぶん]], [[shunbun]]) [[spring equinox]], [[vernal equinox]]
 
 ===Pronunciation===
-* {{IPA|[t͡ɕʰwin]|lang=ltc}}
+* {{ja-accent-common|a|は|る}}
 
 ===Noun===
-{{head|ltc|noun}} # {{context|season|lang=ltc}} [[spring#Noun|spring]]
+{{ja-noun|k|hira=はる|rom=haru}}
 
-# {{defn|ltc}}
+# [[spring#Noun|spring]] {{gloss|season}}
+
+====Synonyms====
+* [[春季]] ([[しゅんき]], [[shunki]]): [[spring]]
+* [[春期]] ([[しゅんき]], [[shunki]]): [[spring]]
+
+[[Category:1000 Japanese basic words|はる]]
+[[Category:Japanese terms spelled with 春]]
+[[Category:Japanese terms written with one Han script character]]
+[[Category:ja:Calendar terms|はる]]
+[[Category:ja:Seasons|はる]]
 
 ----
 
-==Old Chinese==
-{{zh-hanzi-box|春}}
+==Korean==
 
-===Han character===
-{{head|och|noun|sc=Hani}} (*tʰun)
+===Hanja===
+{{ko-hanja|hangeul=춘|eumhun=|rv=chun|mr=ch'un|y=chwun}}
 
-===Noun===
-{{head|och|noun|sc=Hani}}{{attention|cmn|needs inflection template}}
-
-# {{context|season|lang=och}} [[spring#Noun|spring]]
-
-# {{defn|och}}
+# {{defn|lang=ko|sort=日05}}
 
 ----
 
