--- a/en/惷/惷.15714.wikitext
+++ b/en/惷/惷.15714.wikitext
@@ -14,12 +14,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[惷]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=cheun2}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=chǔn
+|c=ceon2
+|mc=y
+|oc=y
+|cat=v,a
+}}
 
 ----
 
@@ -41,15 +46,6 @@
 {{ko-hanja|hangeul=준|eumhun=|rv=jun|mr=chun|y=cwun}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chǔn]] ([[chun3]])|wg=ch'un<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:惷]]
 [[li:惷]]
