--- a/en/惷/惷.15714.wikitext
+++ b/en/惷/惷.15714.wikitext
@@ -47,6 +47,15 @@
 
 # {{defn|lang=ko|sort=心09}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心09| hanviet = xuẩn}}
+
+# {{defn|lang=vi|sort=心09}}
+
 [[fr:惷]]
 [[li:惷]]
 [[hu:惷]]
