--- a/en/惸/惸.15628.wikitext
+++ b/en/惸/惸.15628.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9704<sub>7</sub>|canj=心心日木 (PPAD)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9704<sub>7</sub>|canj=心心日木 (PPAD)|ids=⿰[[忄]][[㝁]]}}
 
 # [[troubled]], [[worried]], [[distressed]]
 
