--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -18,12 +18,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[旬]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ceon4]]|y=cheun4}}
-
-# {{defn|lang=yue|sort=日02}}
+===Pronunciation===
+{{zh-pron
+|m=xún
+|c=ceon4
+|mc=y
+|oc=y
+|cat=n
+}}
 
 ----
 
@@ -52,15 +57,6 @@
 {{ko-hanja|hangeul=순|eumhun=|rv=sun|mr=sun|y=swun}}
 
 # {{defn|lang=ko|sort=日02}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xún]] ([[xun2]])|wg=hsün<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日02}}
 
 ----
 
