--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -10,25 +10,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[惹]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[je5]]|y=ye5}}
-
-# {{defn|lang=yue|sort=心09}}
-
-----
-
-==Hakka==
-
-===Hanzi===
-{{hak-hanzi|poj=[[nya]] (nya<sup>1</sup>)|gd=|hpy=ngia1}}
-
-# {{defn|lang=hak|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=rě
+|c=je5
+|h=pfs=nya;hpy=ngia1
+|mn=jiá/liá
+|w=
+|mc=y
+|oc=y
+|ma=Zh-re.ogg
+|cat=v
+}}
 
 ====References====
-*[http://minhakka.ling.sinica.edu.tw/bkg/hakyin/ Academia Sinica - Hakka-English Dictionary]
-*Lau, Chun-fat. ''Hakka Pinyin Dictionary'' (Chinese). [[Hong Kong]]: [[w:Chinese University of Hong Kong|The Chinese University Press]], 1997 <small>(Chinese IME supplement)</small> ISBN 962-201-750-9.
+*(''Hakka'') [http://minhakka.ling.sinica.edu.tw/bkg/hakyin/ Academia Sinica - Hakka-English Dictionary]
+*(''Hakka'')  Lau, Chun-fat. ''Hakka Pinyin Dictionary'' (Chinese). [[Hong Kong]]: [[w:Chinese University of Hong Kong|The Chinese University Press]], 1997 <small>(Chinese IME supplement)</small> ISBN 962-201-750-9.
+*(''Min Nan'') [http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9452&curpage=1&sample=%E6%83%B9&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=4 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
@@ -50,30 +51,6 @@
 {{ko-hanja|hangeul=야|eumhun=|rv=ya|mr=ya|y=ya}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Pronunciation===
-* {{audio|Zh-re.ogg|Audio|lang=cmn}}
-
-===Hanzi===
-{{cmn-hanzi|pin=[[rě]] ([[re3]])|wg=je<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
-
-----
-
-==Min Nan==
-
-===Hanzi===
-{{nan-hanzi|tlpa=jiá (jia<sup>2</sup>), liá (lia<sup>2</sup>)}}
-
-# {{defn|lang=nan|sort=心09}}
-
-====References====
-*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9452&curpage=1&sample=%E6%83%B9&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=4 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
