added "Vietnamese" section with /vi-readings/ and /defn|lang=vi|sort=心09/ templates; added "References" section and nomfoundation.org link <惺#27660510>

--- a/en/惺/惺.15630.wikitext
+++ b/en/惺/惺.15630.wikitext
@@ -47,6 +47,18 @@
 
 # {{defn|lang=cmn|sort=心09}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心09| hanviet = [[tênh]], [[tinh]]}}
+
+# {{defn|lang=vi|sort=心09}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=60fa Nom Foundation]
+
 [[fr:惺]]
 [[li:惺]]
 [[mg:惺]]
