--- a/en/惻/惻.15631.wikitext
+++ b/en/惻/惻.15631.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9200<sub>0</sub>|canj=心月金弓 (PBCN)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9200<sub>0</sub>|canj=心月金弓 (PBCN)|ids=⿰[[忄]][[則]]}}
 
-# feel anguish, feel compassion
+# [[feel]] [[anguish]], feel [[compassion]]
 
 ====References====
 * {{Han ref|kx=0393.050|dkj=10869|dj=0729.030|hdz=42327.120|uh=60FB|ud=24827|bh=B46C|bd=46188}}
