converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <惻#27661163>

--- a/en/惻/惻.15631.wikitext
+++ b/en/惻/惻.15631.wikitext
@@ -11,12 +11,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[恻]]|惻}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=chak1|sim=恻}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=cè
+|c=caak1,cak1
+|mc=y
+|oc=y
+|cat=v
+}}
 
 ----
 
@@ -38,15 +43,6 @@
 {{ko-hanja|hangeul=측|eumhun=|rv=cheuk|mr=ch'ŭk|y=chuk}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=恻|pin=[[cè]] ([[ce4]])|wg=ts'e<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:惻]]
 [[li:惻]]
