--- a/en/惻/惻.15631.wikitext
+++ b/en/惻/惻.15631.wikitext
@@ -44,6 +44,18 @@
 
 # {{defn|lang=ko|sort=心09}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心09| hanviet = trắc}}
+
+# {{defn|lang=vi|sort=心09}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=60fb Nom Foundation]
+
 [[fr:惻]]
 [[li:惻]]
 [[hu:惻]]
