--- a/en/惼/惼.15632.wikitext
+++ b/en/惼/惼.15632.wikitext
@@ -3,10 +3,27 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9302<sub>7</sub>|canj=心竹尸月 (PHSB)|ids=⿰[[忄]][[扁]]}}
 
-# narrow-minded 
+# [[narrow-minded]]
 
 ====References====
 * {{Han ref|kx=0393.080|dkj=10872|dj=0729.060|hdz=42331.110|uh=60FC|ud=24828|bh=D947|bd=55623}}
+
+----
+
+==Chinese==
+{{zh-hanzi-box|[[惼]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=biǎn
+|c=bin2,pin2
+|mc=y
+|oc=y
+|cat=a
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 ----
 
@@ -28,15 +45,6 @@
 {{ko-hanja|hangeul=편|eumhun=|rv=pyeon|mr=p'yŏn|y=phyen}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[biǎn]] ([[bian3]])|wg=pien<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:惼]]
 [[li:惼]]
