added "Vietnamese" section with /vi-readings/ and /defn|lang=vi|sort=心09/ templates <惼#27662234>

--- a/en/惼/惼.15632.wikitext
+++ b/en/惼/惼.15632.wikitext
@@ -46,6 +46,15 @@
 
 # {{defn|lang=ko|sort=心09}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心09| hanviet = bẽn}}
+
+# {{defn|lang=vi|sort=心09}}
+
 [[fr:惼]]
 [[li:惼]]
 [[hu:惼]]
