--- a/en/惽/惽.15633.wikitext
+++ b/en/惽/惽.15633.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心口心日 (PRPA)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心口心日 (PRPA)|ids=⿰[[忄]][[昬]]}}
 
 # [[confused]]
 
