/* Translingual */ added "ids=" ⿰忄是 (composition) data to /Han char/ template <惿#27664612>

--- a/en/惿/惿.15635.wikitext
+++ b/en/惿/惿.15635.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9608<sub>1</sub>|canj=心日一人 (PAMO)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9608<sub>1</sub>|canj=心日一人 (PAMO)|ids=⿰[[忄]][[是]]}}
 
 # {{defn|Han|sort=心09}}
 
