--- a/en/惿/惿.15635.wikitext
+++ b/en/惿/惿.15635.wikitext
@@ -10,12 +10,20 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[惿]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[tí]] ([[ti2]])|wg=t'i<sup>2</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=tí
+|c=tai4
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心09}}
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:惿]]
 [[li:惿]]
