--- a/en/愀/愀.15636.wikitext
+++ b/en/愀/愀.15636.wikitext
@@ -1,9 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9908<sub>0</sub>|canj=心竹木火 (PHDF)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9908<sub>0</sub>|canj=心竹木火 (PHDF)|ids=⿰[[忄]][[秋]]}}
 
-# to change one's countenance, be anxious
+# to [[change]] one's [[countenance]]
+# be [[anxious]]
 # to [[blush]]
 
 ====References====
