--- a/en/愀/愀.15636.wikitext
+++ b/en/愀/愀.15636.wikitext
@@ -12,12 +12,17 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愀]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=chiu2}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=qiǎo
+|c=ciu2
+|mc=y
+|oc=y
+|cat=v
+}}
 
 ----
 
@@ -39,15 +44,6 @@
 {{ko-hanja|hangeul=초|eumhun=|rv=cho|mr=ch'o|y=cho}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qiǎo]] ([[qiao3]])|wg=ch'iao<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愀]]
 [[li:愀]]
