--- a/en/愁/愁.15637.wikitext
+++ b/en/愁/愁.15637.wikitext
@@ -11,12 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愁]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=sau4|y=sau4}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=chóu
+|c=sau4
+|mc=y
+|oc=y
+|ma=Zh-chóu.ogg
+|cat=n,v
+}}
 
 ----
 
@@ -38,18 +44,6 @@
 {{ko-hanja|hangeul=수|eumhun=|rv=su|mr=su|y=swu}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Pronunciation===
-* {{audio|Zh-chóu.ogg|Audio|lang=cmn}}
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chóu]] ([[chou2]])|wg=ch'ou<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 ----
 
