--- a/en/愂/愂.15638.wikitext
+++ b/en/愂/愂.15638.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=13|four=|canj=十尸心 (JSP)}}
+{{Han char|rn=61|rad=心|as=09|sn=13|four=|canj=十尸心 (JSP)|ids=⿱[[勃]][[心]]}}
 
 # {{defn|Han|sort=心09}}
 
