--- a/en/愂/愂.15638.wikitext
+++ b/en/愂/愂.15638.wikitext
@@ -16,12 +16,15 @@
 ===Pronunciation===
 {{zh-pron
 |m=bèi
-|c=
+|c=bui6
 |mc=
 |oc=
 |ma=
 |cat=
 }}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 ----
 
