--- a/en/愄/愄.15640.wikitext
+++ b/en/愄/愄.15640.wikitext
@@ -13,7 +13,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[tōu]] ([[tou1]]), [[wēi]] ([[wei1]])|wg=t'ou<sup>1</sup>, wei<sup>1</sup>}}
+{{cmn-hanzi|pin=[[wēi]] ([[wei1]]), [[tōu]] ([[tou1]])|wg=t'ou<sup>1</sup>, wei<sup>1</sup>}}
 
 # {{defn|lang=cmn|sort=心09}}
 
