--- a/en/愄/愄.15640.wikitext
+++ b/en/愄/愄.15640.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[愄]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[wēi]] ([[wei1]]), [[tōu]] ([[tou1]])|wg=t'ou<sup>1</sup>, wei<sup>1</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=wēi
+|c=wui1
+|mc=
+|oc=
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心09}}
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:愄]]
 [[li:愄]]
