--- a/en/愅/愅.15641.wikitext
+++ b/en/愅/愅.15641.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9405<sub>6</sub>|canj=心廿中十 (PTLJ)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9405<sub>6</sub>|canj=心廿中十 (PTLJ)|ids=⿰[[忄]][[革]]}}
 
 # {{defn|Han|sort=心09}}
 
