--- a/en/愆/愆.15642.wikitext
+++ b/en/愆/愆.15642.wikitext
@@ -10,12 +10,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愆]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[hin1]]|y=hin1}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=qiān
+|c=hin1
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
 ----
 
@@ -37,15 +43,6 @@
 {{ko-hanja|hangeul=건|eumhun=|rv=geon|mr=kŏn|y=ken}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qiān]] ([[qian1]])|wg=ch'ien<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愆]]
 [[ko:愆]]
