--- a/en/愇/愇.15643.wikitext
+++ b/en/愇/愇.15643.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心木一手 (PDMQ)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心木一手 (PDMQ)|ids=⿰[[忄]][[韋]]}}
 
 # {{defn|Han|sort=心09}}
 
