converted "Mandarin" section into unified "Chinese" section; added "c=" (Cantonese) reading to /zh-pron/ template <愇#27736011>

--- a/en/愇/愇.15643.wikitext
+++ b/en/愇/愇.15643.wikitext
@@ -10,6 +10,24 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愇]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=wěi
+|c=wai5
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[い]] (i)|kun=[[うらむ]] (uramu), [[あさい]] (asai), [[よい]] (yoi)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[wěi]] ([[wei3]])|wg=wei<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愇]]
 [[li:愇]]
