converted "Cantonese", "Mandarin" and "Min Nan" sections into unified "Chinese" section <愈#27736029>

--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -11,12 +11,29 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愈]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[jyu6]]|y=yu6|tra=[[癒]], [[瘉]]}}
+===Pronunciation===
+{{zh-pron
+|m=yù
+|c=jyu6
+|mn=jú/lú
+|mc=y
+|oc=y
+|ma=Zh-yù.ogg
+|cat=adv,det
+}}
 
-# {{defn|lang=yue|sort=心09}}
+====Compounds====
+* [[愈发]]
+* [[愈合]]
+* [[愈加]]
+* [[愈演愈烈]]
+* [[愈…愈…]]
+
+====References====
+*(''Min Nan'') [http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9454&curpage=1&sample=%E6%84%88&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=1 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
@@ -38,37 +55,6 @@
 {{ko-hanja|hangeul=[[유]]|eumhun=|rv=yu|mr=yu|y=yu}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Pronunciation===
-* {{audio|Zh-yù.ogg|Audio|lang=cmn}}
-
-===Hanzi===
-{{cmn-hanzi|tra=[[癒]], [[瘉]]|pin=[[yù]] ([[yu4]])|wg=yü<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
-
-====Compounds====
-* [[愈发]]
-* [[愈合]]
-* [[愈加]]
-* [[愈演愈烈]]
-* [[愈…愈…]]
-
-----
-
-==Min Nan==
-
-===Hanzi===
-{{nan-hanzi|tlpa=jú (ju<sup>2</sup>), lú (lu<sup>2</sup>)}}
-
-# {{defn|lang=nan|sort=心09}}
-
-====References====
-*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9454&curpage=1&sample=%E6%84%88&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=1 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
