converted "Cantonese" and "Mandarin" sections into unified "Chinese" section; added "jyu6" reading to "c=" (Cantonese) entry of /zh-pron/ template <愉#27736064>

--- a/en/愉/愉.15645.wikitext
+++ b/en/愉/愉.15645.wikitext
@@ -11,12 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愉]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=yu4}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=yú
+|c=jyu4,jyu6
+|mc=y
+|oc=y
+|ma=
+|cat=a,v
+}}
 
 ----
 
@@ -38,15 +44,6 @@
 {{ko-hanja|hangeul=유|eumhun=|rv=yu|mr=yu|y=yu}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yú]] ([[yu2]])|wg=yü<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 ----
 
