converted "Mandarin" section into unified "Chinese" section; added "c=" (Cantonese) reading to /zh-pron/ template; added "References" section and www.iso10646hk.net link <愌#27753111>

--- a/en/愌/愌.15648.wikitext
+++ b/en/愌/愌.15648.wikitext
@@ -10,6 +10,24 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愌]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=huàn
+|c=wun6
+|mc=
+|oc=
+|ma=
+|cat=
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[かん]] (kan), [[がん]] (gan)|kun=[[はびこる]] (habikoru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[huàn]] ([[huan4]])|wg=huan<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愌]]
 [[li:愌]]
