added "Vietnamese" section with /vi-readings/ and /defn|lang=vi|sort=心09/ templates <愎#27754582>

--- a/en/愎/愎.15650.wikitext
+++ b/en/愎/愎.15650.wikitext
@@ -44,6 +44,18 @@
 
 # {{defn|lang=ko|sort=心09}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心09| hanviet = [[phục]], [[phức]]}}
+
+# {{defn|lang=vi|sort=心09}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=610e Nom Foundation]
+
 [[fr:愎]]
 [[ko:愎]]
 [[li:愎]]
