/* Translingual */ added "to hesitate" definition; added "ids=" ⿰忄甚 (composition) data to /Han char/ template <愖#27769431>

--- a/en/愖/愖.15658.wikitext
+++ b/en/愖/愖.15658.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9401<sub>1</sub>|canj=心廿一女 (PTMV)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9401<sub>1</sub>|canj=心廿一女 (PTMV)|ids=⿰[[忄]][[甚]]}}
 
-# {{defn|Han|sort=心09}}
+# to [[hesitate]]
 
 ====References====
 * {{Han ref|kx=0395.060|dkj=10940|dj=0731.160|hdz=42326.010|uh=6116|ud=24854|bh=D942|bd=55618}}
