t+tr:[[savaş]] ([[WT:EDIT|Assisted]]) <fight#27772875>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -391,6 +391,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Swedish: {{t+|sv|strid}}, {{t+|sv|kamp}}
 * Tamil: {{t+|ta|சண்டை|tr=saṇṭai|sc=Taml}}
 * Tok Pisin: {{t|tpi|pait}}
+* Turkish: {{t+|tr|savaş}}
 * Ukrainian: {{t+|uk|битва|f|tr=býtva|sc=Cyrl}}
 {{trans-bottom}}
 
