/* Derived terms */ <fight#27781316>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -285,19 +285,21 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * See also [[Wikisaurus:fight]]
 
 ====Derived terms====
-{{rel-top|Terms derived from the noun ''fight''}}
+{{rel-top3|Terms derived from ''fight'' (noun)}}
 * [[bullfight]]
 * [[bun fight]]
 * [[cockfight]]
 * [[dogfight]]
 * [[fight or flight]]
 * [[fighter]]
+{{rel-mid3}}
 * [[fighting]]<!--adjective and noun; whence * [[fighting cock]], etc-->
 * [[fight scene]]
+* [[fight the good fight]]
 * [[fist fight]]
-{{rel-mid}}
 * [[food fight]]
 * [[footfight]]
+{{rel-mid3}}
 * [[gunfight]]
 * [[pillow fight]]
 * [[prize fight]]
