--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -225,6 +225,23 @@ From {{etyl|de|nb}} {{term|Feld|lang=de}}
 
 # {{form of|past participle|felle|lang=nb}}
 
+----
+==Norwegian Nynorsk==
+
+===Etymology===
+From {{etyl|de|nn}} {{term|Feld|lang=de}}
+
+===Noun===
+{{nn-noun-n1}}
+
+# [[field]]
+
+====Derived terms====
+* {{l|nn|magnetfelt}}
+
+===References===
+* {{R:The Nynorsk Dictionary}}
+
 [[ar:felt]]
 [[de:felt]]
 [[et:felt]]
