/* Translingual */ added "ids=" ⿱朔心 (composition) data to /Han char/ template <愬#27806216>

--- a/en/愬/愬.15679.wikitext
+++ b/en/愬/愬.15679.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=14|four=8733<sub>2</sub>|canj=廿月心 (TBP)}}
+{{Han char|rn=61|rad=心|as=10|sn=14|four=8733<sub>2</sub>|canj=廿月心 (TBP)|ids=⿱[[朔]][[心]]}}
 
 # [[accuse]]
 # [[sue]]
