converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <愬#27806224>

--- a/en/愬/愬.15679.wikitext
+++ b/en/愬/愬.15679.wikitext
@@ -14,12 +14,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愬]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=sou3|y=sou3}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=sù
+|c=sou3
+|mc=y
+|oc=y
+|ma=
+|cat=v
+}}
 
 ----
 
@@ -41,15 +47,6 @@
 {{ko-hanja|hangeul=[[소]], [[색]]|eumhun=|rv=so, saek|mr=so, saek|y=so, sayk}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[sù]] ([[su4]])|wg=su<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 ----
 
