added "Vietnamese" section with /vi-readings/ and /defn|lang=vi|sort=心10/ templates; added "References" section and nomfoundation.org link <愷#27808239>

--- a/en/愷/愷.15690.wikitext
+++ b/en/愷/愷.15690.wikitext
@@ -47,6 +47,7 @@
 {{cmn-hanzi|sim=恺|pin=[[kǎi]] ([[kai3]])|wg=k'ai<sup>3</sup>}}
 
 # {{defn|lang=cmn|sort=心10}}
+
 ----
 
 ==Middle Chinese==
@@ -55,6 +56,18 @@
 '''愷''' (kə̌i)
 
 # {{defn|lang=ltc|sort=心10}}
+
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心10| hanviet = khải}}
+
+# {{defn|lang=vi|sort=心10}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=6137 Nom Foundation]
 
 [[fr:愷]]
 [[ko:愷]]
