converted "Cantonese" and "Mandarin" sections into unified "Chinese" section; removed "Middle Chinese" section (no longer needed) <愷#27808252>

--- a/en/愷/愷.15690.wikitext
+++ b/en/愷/愷.15690.wikitext
@@ -11,12 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[恺]]|愷}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=hoi2|sim=恺}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=kǎi
+|c=hoi2
+|mc=y
+|oc=y
+|ma=
+|cat=v,a
+}}
 
 ----
 
@@ -38,24 +44,6 @@
 {{ko-hanja|hangeul=개|eumhun=|rv=gae|mr=kae|y=kay}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=恺|pin=[[kǎi]] ([[kai3]])|wg=k'ai<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
-
-----
-
-==Middle Chinese==
-
-===Han character===
-'''愷''' (kə̌i)
-
-# {{defn|lang=ltc|sort=心10}}
 
 ----
 
