/* Translingual */ added "ids=" ⿱孫心 (composition) data to /Han char/ template <愻#27843718>

--- a/en/愻/愻.15694.wikitext
+++ b/en/愻/愻.15694.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=14|four=1233<sub>3</sub>|canj=弓火心 (NFP)}}
+{{Han char|rn=61|rad=心|as=10|sn=14|four=1233<sub>3</sub>|canj=弓火心 (NFP)|ids=⿱[[孫]][[心]]}}
 
 # {{defn|Han|sort=心10}}
 
