added "Vietnamese" section with /vi-readings/ and /defn|lang=vi|sort=心10/ templates <慃#27844330>

--- a/en/慃/慃.15702.wikitext
+++ b/en/慃/慃.15702.wikitext
@@ -17,6 +17,15 @@
 
 # {{defn|lang=cmn|sort=心10}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心10| hanviet = õng}}
+
+# {{defn|lang=vi|sort=心10}}
+
 [[fr:慃]]
 [[pl:慃]]
 [[zh:慃]]
