/* Vietnamese */ fixed formatting to use /vi-readings/ template <慇#27844602>

--- a/en/慇/慇.15706.wikitext
+++ b/en/慇/慇.15706.wikitext
@@ -49,9 +49,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''慇''' ([[ân]])
+{{vi-readings|rs=心10| hanviet = ân}}
 
-# {{defn|lang=vi}}
+# {{defn|lang=vi|sort=心10}}
 
 [[fr:慇]]
 [[li:慇]]
