--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -3,6 +3,8 @@
 ===Etymology===
 From {{etyl|enm|en}} {{term|cacchen|lang=enm}}, from {{etyl|xno|en}} {{term|cachier||lang=fro}}, from {{etyl|ONF.|en}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la|en}} {{term|capto|captare|lang=la}}. Akin to [[w:French language|Modern French]] {{term|chasser|lang=fr}} (from Old French {{term|chacier|lang=fro}}, whence English ''[[chase]]''), [[w:Spanish language|Spanish]] {{term|cazar|lang=es}}.
 
+The verb became strong, possibly under the influence of the similar meaning {{term|latch|lang=en}} (from {{etyl|ang|en}} {{term|læċċan|lang=ang}}) whose past tense was {{term|lahte|lang=en}}, {{term|lauhte|lang=en}}, {{term|laught|lang=en}} ({{etyl|ang|en}} {{term|læhte|lang=ang}}) until becoming a weak verb in Modern English.
+
 ===Pronunciation===
 * {{enPR|kăch}}, {{IPA|/kætʃ/|/kɛtʃ/|lang=en}}
 * {{audio|en-us-catch.ogg|Audio (US)|lang=en}}
