t+cmn:[[也就是]] ([[WT:EDIT|Assisted]]) <i.e.#27870165>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -29,6 +29,8 @@ i.e. differs from [[viz.]] in that what follows merely restates what was said in
 * Arabic: {{t|ar|يعني|tr=yáʕni}}
 * Armenian: {{t|hy|այսինքն|tr=aysink’n}}
 * Bulgarian: {{t|bg|т.е.|tr=toest|sc=Cyrl}}
+* Chinese:
+*: Mandarin: {{t+|cmn|也就是|sc=Hani}}
 * Czech: {{t+|cs|tj.}}
 * Danish: {{t+|da|dvs.}}
 * Dutch: {{t+|nl|d.w.z.}}
