+[[Category:en:Browns]]; +[[Category:en:Yellows]] using [[Help:Gadget-HotCat|HotCat]] <olive#27881474>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -296,6 +296,8 @@ From {{etyl|la|gmh}} {{term|oliva|lang=la}}.
 # {{l|en|olive}}
 
 [[Category:gmh:Fruits]]
+[[Category:en:Browns]]
+[[Category:en:Yellows]]
 
 ----
 
