converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <態#27885824>

--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -18,12 +18,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[态]]|態}}
 
-===Hanzi===
-{{yue-hanzi|jyut=taai3|y=taai3|sim=态}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=tài,huǎng
+|c=taai3
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
 ----
 
@@ -46,6 +52,7 @@
 
 [[Category:Japanese terms written with one Han script character]]
 [[Category:Japanese terms spelled with 態]]
+
 ----
 
 ==Korean==
@@ -54,15 +61,6 @@
 {{ko-hanja|hangeul=태|eumhun=|rv=tae|mr=t'ae|y=thay}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=态|pin=[[huǎng]] ([[huang3]]), [[tài]] ([[tai4]])|wg=huang<sup>3</sup>, t'ai<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 ----
 
