/* Vietnamese */ fixed formatting to use /vi-readings/ template <慌#27885847>

--- a/en/慌/慌.15711.wikitext
+++ b/en/慌/慌.15711.wikitext
@@ -54,9 +54,9 @@ Note: The right-middle part could be found as [[亾]] instead of [[亡]].
 ==Vietnamese==
 
 ===Han character===
-'''慌''' ([[hoảng]], [[hoang]])
+{{vi-readings|rs=心10| hanviet = [[hoảng]], [[hoang]]}}
 
-# {{defn|lang=vi}}
+# {{defn|lang=vi|sort=心10}}
 
 [[fr:慌]]
 [[li:慌]]
