converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <慍#27885906>

--- a/en/慍/慍.15712.wikitext
+++ b/en/慍/慍.15712.wikitext
@@ -11,12 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愠]]|慍}}
 
-===Hanzi===
-{{yue-hanzi|jyut=wan3|y=wan3|sim=愠}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=yùn,zhé
+|c=wan3
+|mc=
+|oc=y
+|ma=
+|cat=a
+}}
 
 ----
 
@@ -38,15 +44,6 @@
 {{ko-hanja|hangeul=온|eumhun=|rv=on|mr=on|y=on}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=愠|pin=[[yùn]] ([[yun4]]), [[zhé]] ([[zhe2]])|wg=yün<sup>4</sup>, che<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:慍]]
 [[li:慍]]
