converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <慎#27885951>

--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -17,12 +17,18 @@ Note the different forms, corresponds to different forms of [[真]].
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[慎]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[san6]]|y=san6}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=shèn
+|c=san6
+|mc=
+|oc=y
+|ma=
+|cat=v
+}}
 
 ----
 
@@ -40,15 +46,6 @@ Note the different forms, corresponds to different forms of [[真]].
 
 ====Readings====
 * {{ja-readings|on=[[しん]] (shin)|kun=[[つつしむ]] (tsutsushimu), [[つつしみ]] (tsutsushimi)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[shèn]] ([[shen4]])|wg=shen<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 ----
 
