t+ps:[[خښته]] ([[WT:EDIT|Assisted]]) <brick#27887644>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -115,7 +115,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Novial: {{t-needed|nov}}
 * Occitan: {{t|oc|brica|f}}
 * Oriya: {{t+|or|ଇଟା|sc=Orya}}
-* Pashto: {{t-needed|ps}}
+* Pashto: {{t+|ps|خښته|f|tr=ḵẖaś̱ẖtaʿh|sc=ps-Arab}}
 * Persian: {{t+|fa|آجر|tr=âjor|sc=fa-Arab}}
 * Polish: {{t+|pl|cegła}}
 * Portuguese: {{t+|pt|tijolo|m}}
