converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <慚#28003365>

--- a/en/慚/慚.15726.wikitext
+++ b/en/慚/慚.15726.wikitext
@@ -12,12 +12,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[惭]]|慚}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=chaam4|sim=惭}}
-
-# {{defn|lang=yue|sort=心11}}
+===Pronunciation===
+{{zh-pron
+|m=cán
+|c=caam4
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
 
 ----
 
@@ -39,15 +45,6 @@
 {{ko-hanja|hangeul=참|eumhun=|rv=cham|mr=ch'am|y=cham}}
 
 # {{defn|lang=ko|sort=心11}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=惭|pin=[[cán]] ([[can2]])|wg=ts'an<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心11}}
 
 ----
 
