converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <慟#28007337>

--- a/en/慟/慟.15731.wikitext
+++ b/en/慟/慟.15731.wikitext
@@ -13,12 +13,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[恸]]|慟}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=dung6|sim=恸}}
-
-# {{defn|lang=yue|sort=心11}}
+===Pronunciation===
+{{zh-pron
+|m=tòng
+|c=dung6
+|mc=y
+|oc=y
+|ma=
+|cat=n,v
+}}
 
 ----
 
@@ -40,15 +46,6 @@
 {{ko-hanja|hangeul=통|eumhun=|rv=tong|mr=t'ong|y=thong}}
 
 # {{defn|lang=ko|sort=心11}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=恸|pin=[[tòng]] ([[tong4]])|wg=t'ung<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心11}}
 
 [[fr:慟]]
 [[li:慟]]
