t+ro:[[secretar]] t+ro:[[secretară]] t-balance t+ro:[[pasăre secretar]] ([[WT:EDIT|Assisted]]) <secretary#28156469>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -104,6 +104,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 *: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=ku-Arab}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
+* Romanian: {{t+|ro|secretar|m}}, {{t+|ro|secretară|f}}
 * Russian: {{t+|ru|мини́стр|m|tr=minístr}}, {{t+|ru|секрета́рь|m|tr=sekretár’}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}
 * Serbo-Croatian: {{t|sh|tȃjnīk|m}}, {{t|sh|tȃjnica|f}}
@@ -133,11 +134,12 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * German: {{t|de|Schreibsekretär|m}}
 * Hungarian: {{t|hu|szekreter}}
 * Interlingua: {{t|ia|bureau}}
-{{trans-mid}}
 * Italian: {{t+|it|scrittoio|m}}
+{{trans-mid}}
 * Kurdish:
 *: Kurmanji: {{t+|kmr|sekreter}}
 * Portuguese: {{t+|pt|escrivaninha|f}}, {{t+|pt|secretária|f}}, {{qualifier|portugal}} {{t+|pt|secretária}}
+* Romanian: {{t+|ro|secretar|m}}
 * Russian: {{t+|ru|секрете́р|m|tr=sekretɛ́r}}
 * Spanish: {{t+|es|escribanía|f}}
 * Swahili: {{t+|sw|makarani}}
@@ -148,8 +150,9 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * French: {{t|fr|messager serpentaire}}
 * German: {{t+|de|Sekretär}}
 * Hungarian: {{t|hu|kígyászkeselyű}}
-{{trans-mid}}
 * Irish: {{t|ga|rúnaí|m}}
+{{trans-mid}}
+* Romanian: {{t|ro|pasăre secretar|f}}
 * Russian: {{t+|ru|пти́ца-секрета́рь|f|tr=ptíca-sekretár’}}
 * Spanish: {{t|es|serpentario|m}}
 * Swahili: {{t+|sw|makarani}}
