--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -24,7 +24,12 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=人10}}
 
-# {{defn|lang=ja|sort=人10}}
+# [[bystander]]
+# [[side]]
+# [[besides]]
+# [[while]]
+# [[nearby]]
+# [[3rd person]]
 
 ====Readings====
 * {{ja-readings|on=[[ぼう]] (bō), [[ほう]] (hō)|kun=[[かたわら]] (katawara), [[そばに]] ([[傍に]], sobani), [[そう]] (sou)}}
